fixed some layout issue for project page

--- a/frontend/src/css/category-card.css
+++ b/frontend/src/css/category-card.css
@@ -1,8 +1,20 @@
 .category-card {
     width: 270px;
-    background-color: aquamarine;
+    background-color: var(--opac-light-grey);
+    border-radius: 10px;
+}
+
+.category-card .card-title {
+    margin-top: 10px;
+    margin-left: 10px;
+    font-size: 20px;
+}
+
+.category-card #delete-category {
+    font-size: 20px;
+
 }
 
 .task-card {
-    background-color: beige;
+
 }
