--- a/frontend/src/css/landing-page.css
+++ b/frontend/src/css/landing-page.css
@@ -24,7 +24,7 @@ height: 100vh;
 }
 
 .landing-page #get-started {
-  background-color: var(--theme-dark-green);
+  background: linear-gradient(135deg, #8f34eb 0%, #07b4b5 100%);
   color: #ffffff;
   margin-top: 25px;
 }
