--- a/frontend/src/css/projects-board.css
+++ b/frontend/src/css/projects-board.css
@@ -22,7 +22,7 @@
     border-radius: 10px;
     margin-right: 4vh;
     margin-bottom: 4vh;
-    box-shadow: 10px 10px 30px 0px rgba(179,179,179,0.7);
+    box-shadow: 1px 1px 5px 0px rgba(87,87,87,0.8);
     
 }
 
